Also add clientSecret and extraScopes to oidc config and allow downloading an oidc kubeconfig
